crates/cribo/tests/snapshots/execution_results@match_subject_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/match_subject_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "helper kind",
    stderr: "",
}
