crates/cribo/tests/snapshots/execution_results@mixed_distribution_from_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/mixed_distribution_from_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "mixed loaded\nbundled greet native",
    stderr: "",
}
