crates/cribo/tests/snapshots/execution_results@mixed_distribution_function_alias_child.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/mixed_distribution_function_alias_child/main.py
---
ExecutionResults {
    status: Success,
    stdout: "mixed loaded\nbundled greet native",
    stderr: "",
}
