crates/cribo/tests/snapshots/execution_results@mixed_distribution_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/mixed_distribution_imports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "mixed distribution True",
    stderr: "",
}
