crates/cribo/tests/snapshots/execution_results@nested_definition_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/nested_definition_identity/main.py
---
ExecutionResults {
    status: Success,
    stdout: "observed: ['provider']\ntagged: provider tagged\nworker: provider worker",
    stderr: "",
}
