crates/cribo/tests/snapshots/execution_results@pickle_inlined_class.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pickle_inlined_class/main.py
---
ExecutionResults {
    status: Success,
    stdout: "roundtrip: ledger\nidentity: True\nmodule: records",
    stderr: "",
}
