crates/cribo/tests/snapshots/execution_results@pickle_inlined_function.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pickle_inlined_function/main.py
---
ExecutionResults {
    status: Success,
    stdout: "roundtrip: ran job\nidentity: True\nmodule: provider task",
    stderr: "",
}
