crates/cribo/tests/snapshots/execution_results@pickle_local_import_module_method.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pickle_local_import_module_method/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True kept decoy_pkg.missing",
    stderr: "",
}
