crates/cribo/tests/snapshots/execution_results@pickle_wrapper_class.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pickle_wrapper_class/main.py
---
ExecutionResults {
    status: Success,
    stdout: "models loaded\nroundtrip: widget\nidentity: True\nmodule: models",
    stderr: "",
}
