crates/cribo/tests/snapshots/execution_results@pickle_wrapper_function.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pickle_wrapper_function/main.py
---
ExecutionResults {
    status: Success,
    stdout: "tasks loaded\nroundtrip: ran job\nidentity: True\nmodule: tasks task",
    stderr: "",
}
